--- a/src/pages/Popup/Popup.css
+++ b/src/pages/Popup/Popup.css
@@ -7,18 +7,11 @@
   text-align: center;
   height: 100%;
   padding: 10px;
-  background-color: #282c34;
 }
 
 .App-logo {
   height: 30vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -32,13 +25,14 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #6197fb;
 }
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
